--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@ h1 {
     color: #333;
 }
 
+h5 {
+    font-weight: normal;
+}
+
 /* h3 {
     font-weight: normal;
     color: #fc0000;
@@ -53,6 +57,7 @@ input {
 button {
     width: 12em;
     height: 3em;
+    font-size: 1.0em;
     padding: 8px 16px;
     background-color: #006e6e;
     color: #fff;
